kubernetes/prod/app-prod-deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artemis-prod-worker-deployment
  labels:
    app: artemis-prod-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artemis-prod-worker
  template:
    metadata:
      labels:
        app: artemis-prod-worker
    spec:
      containers:
        - name: worker
          image: willsuan/artemis-launch-api:prod
          imagePullPolicy: Always
          command: ["python", "-m", "src.worker"]
