kubernetes/prod/app-prod-service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: artemis-prod-api-service
spec:
  type: ClusterIP
  selector:
    app: artemis-prod-api
  ports:
    - port: 5000
      targetPort: 5000
