kubernetes/prod/app-prod-service-nodeport-api.yml
apiVersion: v1
kind: Service
metadata:
  name: artemis-prod-api-nodeport
spec:
  type: NodePort
  selector:
    app: artemis-prod-api
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30501
