kubernetes/prod/app-prod-service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: artemis-prod-redis-service
spec:
  type: ClusterIP
  selector:
    app: artemis-prod-redis
  ports:
    - port: 6379
      targetPort: 6379
