kubernetes/prod/app-prod-ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artemis-prod-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: "wsuan-artemis.coe332.tacc.cloud"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: artemis-prod-api-service
                port:
                  number: 5000
